      when creating new packaging from scratch anymorel.
  * gem2deb-test-runner: also set GEM_PATH when running tests. This makes
    tests work out of the box when using --gem-install
  * dh_ruby --gem-install:
    - Only install files that match a whitelist, to avoid having all the
      clutter that usually comes in source packages installed to binary
      packages.

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 09 Jan 2016 21:00:29 -0200

gem2deb (0.24) experimental; urgency=medium

  * gem installer: avoid installing the debian/ directory when upstream
    metadata specifies the packages files as '**/*'
  * test runner: call `rubyX.Y -S rake` instead of `rakeX.Y`. Ruby 2.3 does
    not ship a rake2.3 anymore.
  * dh-make-ruby: change generated Vcs-Git URL from git:// to https://

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 09 Jan 2016 20:54:02 -0200

gem2deb (0.23) experimental; urgency=medium

  * dh_ruby:
    - take parameters from the $DH_RUBY environment variable
    - add experimental support for installing packages as gems.
    - allow options to be passed in any order
    - clarify usage message

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 13 Nov 2015 10:59:47 -0200

gem2deb (0.22.1) unstable; urgency=medium

  * Skip integration tests during the build. When buildind only architecture
    independent packages (i.e. with dpkg-buildpackage -A or sbuild
    --arch-all-only), the nested dpkg-buildpackage calls in the integration
    tests will fail. We'll still run the integration tests under autopkgtest
    though.

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 16:39:24 -0200

gem2deb (0.22) unstable; urgency=medium

  [ Pirate Praveen ]
  * use --source https://rails-assets.org for rails-assets-* (Closes: #771212)

  [ Antonio Terceiro ]
  * dh-make-ruby:
    - handle the case where apt-file exits successfully but still does not
      find anything (Closes: #800108)
    - cleanup template debian/rules, and make it set