@@ -1,0 +1,3 @@
+require 'mkmf'
+
+create_makefile('install_as_gem/install_as_gem_native')
