@@ -1,0 +1,6 @@
+#include "ruby.h"
+
+void
+Init_install_as_gem_native () {
+  rb_define_module ("InstallAsGemNative");
+}
